# covdiff

./: .pre-commit-config.yaml  .taskcluster.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
covdiff/: __init__.py  main.py  writers.py
covdiff/filters/: mozilla-central.txt
src/covdiff/: __main__.py  main.py  writers.py
src/covdiff/fetch/: __main__.py  fetch.py
src/covdiff/filters/: mozilla-central.txt
test/: conftest.py  test_compare.py
