[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.5"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/tests/*",
    "*/build/*",
    "*/dist/*",
    "*/.egg/*",
]

[tool.isort]
force_sort_within_sections = false
known_first_party = "covdiff"
profile = "black"

[tool.mypy]
exclude = "^.*tests.*$"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.poetry]
authors = [
    "Jason Kratzer <jkratzer@mozilla.com>"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description = "Compare coverage repors"
homepage = "https://github.com/MozillaSecurity/covdiff"
include = ["tests/**"]
keywords = ["coverage", "diff", "delta"]
license = "MPL-2.0"
maintainers = [
    "Mozilla Fuzzing Team <fuzzing@mozilla.com>"
]
name = "covdiff"
readme = "README.md"
repository = "https://github.com/MozillaSecurity/covdiff"
version = "0.1.0"

[tool.poetry.dependencies]
FuzzManager = "^0.5.1"
XlsxWriter = "^3.0.1"
google-api-python-client = "^2.66.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
google-cloud-storage = "^2.5.0"
pandas = "^1.3.3"
python = "^3.7.12"
six = "^1.16.0"
types-six = "^1.16.18"
typing-extensions = "^3.10.0"
zstandard = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
codecov = "^2.1.11"
flake8 = "^4.0.1"
flake8-isort = "^4.2.0"
flake8-quotes = "^3.3.1"
gitlint = "^0.17.0"
mypy = "^0.971"
pre-commit = "^2.20.0"
pylint = "2.14.5"
pytest = "^7.0.1"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.0.7"
pytest-mock = "^3.6.0"
pytest-pylint = "^0.18.0"
python-semantic-release = "7.31.2"
taskcluster-yml-validator = "^0.0.9"
toml = "^0.10.2"
toml-sort = "^0.20.0"
tox = "^3.24.5"

[tool.poetry.scripts]
covdiff = "covdiff.main:main"
foo = "covdiff.fetch:parse_args"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "fixme",
    "invalid-name",
    "line-too-long",
    "logging-fstring-interpolation",
    "missing-module-docstring"
]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
commit_subject = "chore(release): {version} [skip ci]"
upload_to_pypi = false
upload_to_release = false
version_toml = "pyproject.toml:tool.poetry.version"
